# qgis-deployment-toolbelt-cli

./: .dockerignore  .gitignore  .mailmap  .pre-commit-config.yaml  .safety-project.ini  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  scenario.qdt.yml  setup.py  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  release.yml
.github/workflows/: build_release.yml  documentation.yml  lint.yml  security.yml  tests.yml
builder/: code_signing_certificate.crt  code_signing_certificate_request.csr  codesign_openssl.cnf  pyinstaller_build_macos.py  pyinstaller_build_ubuntu.py  pyinstaller_build_windows.py  template_win_exe_version_info.txt  tldextract_update.py  version_info_templater.py
docs/: conf.py  index.md
docs/_templates/: layout.html  page.html
docs/development/: documentation.md  packaging.md  releasing.md  signing_binary.md  testing.md  ubuntu.md  windows.md
docs/guides/: howto_behind_proxy.md  howto_check_qdt_binary_certificate.md  howto_download_latest_qdt_exe.md  howto_linux_sign_executable.md  howto_manage_private_git.md  howto_windows_sign_executable.md
docs/jobs/: default_profile_setter.md  environment_variables.md  index.md  plugins_synchronizer.md  profiles_downloader.md  profiles_synchronizer.md  qgis_installation_finder.md  qglobal_config_manager.md  shortcuts_manager.md
docs/misc/: _references_carousel.md  examples.md  funding.md  references.md
docs/reference/: qdt_profile.md
docs/schemas/profile/: qgis_plugin.json
docs/schemas/scenario/: qdt_scenario.json  settings.json
docs/schemas/scenario/jobs/: default-profile-setter.json  qdt_job_base.json  qglobal-config-manager.json  qplugins-synchronizer.json  qprofiles-downloader.json  shortcuts-manager.json
docs/usage/: cli.md  features.md  how_it_works.md  installation.md  profile.md  scenario.md  settings.md
examples/: qdt-files.json
examples/global_config/: qgis_global_settings.ini
examples/scenarios/: demo-scenario-global-config.qdt.yml  demo-scenario.qdt.yml
qgis_deployment_toolbelt/: __about__.py  cli.py  constants.py  exceptions.py
qgis_deployment_toolbelt/commands/: cmd_completion.py  cmd_rules_context.py  deployment.py  upgrade.py
qgis_deployment_toolbelt/jobs/: generic_job.py  job_autoclean.py  job_default_profile_setter.py  job_environment_variables.py  job_plugins_downloader.py  job_plugins_synchronizer.py  job_profiles_downloader.py  job_profiles_synchronizer.py  job_qgis_installation_finder.py  job_qglobal_config_manager.py  job_shortcuts.py  job_splash_screen.py  orchestrator.py
qgis_deployment_toolbelt/plugins/: plugin.py
qgis_deployment_toolbelt/profiles/: local_git_handler.py  profiles_handler_base.py  qdt_profile.py  qgis_ini_handler.py  remote_git_handler.py  remote_http_handler.py  rules_context.py
qgis_deployment_toolbelt/scenarios/: scenario_reader.py
qgis_deployment_toolbelt/shortcuts/: icon_converter.py  shortcut_freedesktop.template  shortcuts_handler.py
qgis_deployment_toolbelt/utils/: bouncer.py  check_image_size.py  check_path.py  file_downloader.py  file_stats.py  formatters.py  frozen_app.py  ini_interpolation.py  journalizer.py  linux_utils.py  os_utils_router.py  proxies.py  slugger.py  str2bool.py  trash_or_delete.py  tree_files_reader.py  url_helpers.py  user_groups.py  win32utils.py
requirements/: base.txt  development.txt  documentation.txt  packaging.txt  security.txt  testing.txt
scripts/: icon_converter.py  qdt_clone_pull_profiles.ps1  qdt_crt_import.ps1  qdt_dowloader.ps1
tests/: test_about.py  test_cli_completion.py  test_cli_main.py  test_cli_rules_context_export.py  test_cli_upgrade.py  test_constants.py  test_frozen_app.py  test_git_handler_local.py  test_git_handler_remote.py  test_job_default_profile_setter.py  test_job_environment_variables.py  test_job_generic.py  test_job_plugins_synchronizer.py  test_job_profiles_sync.py  test_job_qgis_installation_finder.py  test_job_qglobal_config_manager.py  test_jobs_launch.py  test_journalizer.py  test_qdt_profile_object.py  test_qgis_ini_helper.py  test_qplugin_object.py  test_rules_context.py  test_scenario_reader.py  test_shortcuts.py  test_tree_qdt-files_json.py  test_utils_bouncer.py  test_utils_check_path.py  test_utils_file_downloader.py  test_utils_file_stats.py  test_utils_formatters.py  test_utils_images_size.py  test_utils_ini_custom_parser.py  test_utils_ini_interpolation.py  test_utils_linux.py  test_utils_proxies.py  test_utils_slugifier.py  test_utils_str2bool.py  test_utils_url_helpers.py  test_utils_user_groups.py  test_utils_win32.py
tests/dev/: dev_copy_files_pathlib.py
tests/fixtures/profiles/: good_profile_complete.json
tests/fixtures/scenarios/: good_scenario_plugins_downloader_force.qdt.yml  good_scenario_profiles_http.yml  good_scenario_profiles_only_different.qdt.yml  good_scenario_profiles_only_missing.qdt.yml  good_scenario_sample.qdt.yml  good_scenario_splash_screen_remove.qdt.yml  good_scenario_with_prefixed_env_vars.qdt.yml  good_scenario_with_unexisting_jobs.qdt.yml  scenario_sample_as_admin.qdt.yml
