[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-deployment-toolbelt"
description = "QGIS deployment toolbelt is a CLI (Command Line Interface) to perform redundant operations after a QGIS deployment, managing QGIS profiles, plugins, environment variables, start menu / desktop shortcuts and many things to rationalize your QGIS installations."
dynamic = ["version"]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4"
authors = [
    { name = "Julien Moura (Oslandia)", email = "qgis+qdt@oslandia.com" },
]
maintainers = [
    { name = "Julien Moura (Oslandia)", email = "qgis+qdt@oslandia.com" },
    { name = "Jean-Marie Kerloch (Oslandia)", email = "qgis+qdt@oslandia.com" },
    { name = "Nicolas Godet (ISL)", email = "nicolas.godet@outlook.fr" },
]
keywords = ["GIS", "QGIS", "cli", "deployment", "profiles", "qdt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: System :: Installation/Setup",
]
dependencies = [
    "distro==1.9.* ; sys_platform == 'linux'",
    "dulwich>=0.24.1,<0.24.2",
    "giturlparse>=0.12,<0.13",
    "imagesize>=1.4,<1.5",
    "packaging>=22,<26",
    "pypac>=0.16.3,<1",
    "python-rule-engine>=0.5,<1.1",
    "python-win-ad>=0.6.2,<1 ; sys_platform == 'win32'",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyyaml>=5.4,<7",
    "requests>=2.32.3,<3",
    "truststore>=0.10.1,<1",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8-bugbear>=23",
    "flake8-builtins>=2.1",
    "flake8-eradicate>=1",
    "flake8-isort>=5",
    "Flake8-pyproject>=1.2.3",
    "pre-commit>=4,<5",
]

doc = [
    "furo>=2024",
    "matplotlib>=3.8.2,<4",
    "myst-parser[linkify]>=2",
    "sphinx-argparse-cli>=1.19",
    "sphinx-autobuild>=2024",
    "sphinx-copybutton<1",
    "sphinx-design>=0.5,<1",
    "sphinx-sitemap>=2.4,<3",
    "sphinxcontrib-mermaid>=1",
    "sphinxext-opengraph>=0.10",
]

packaging = [
    "pyinstaller>=6.13,<6.16",
    "pyinstaller-hooks-contrib==2025.*",
    "pypiwin32==223 ; sys_platform == 'win32'",
]

security = ["bandit>=1.8.3,<2", "safety>=3.3.1,<4"]

test = [
    "GitPython>=3.1,<3.2",
    "Pillow>=10.4.0,<11.4",
    "pytest-cov>=4,<7",
    "validators>=0.29.0,<0.36",
]

[project.scripts]
qdt = "qgis_deployment_toolbelt.cli:main"
qdeploy-toolbelt = "qgis_deployment_toolbelt.cli:main"
qgis-deployment-toolbelt = "qgis_deployment_toolbelt.cli:main"

[project.urls]
Changelog = "https://github.com/qgis-deployment/qgis-deployment-toolbelt-cli/blob/main/CHANGELOG.md"
Documentation = "https://qgis-deployment.github.io/qgis-deployment-toolbelt-cli/"
Homepage = "https://qgis-deployment.github.io/qgis-deployment-toolbelt-cli/"
Issues = "https://github.com/qgis-deployment/qgis-deployment-toolbelt-cli/issues"
releasenotes = "https://github.com/qgis-deployment/qgis-deployment-toolbelt-cli/releases/latest"
Source = "https://github.com/qgis-deployment/qgis-deployment-toolbelt-cli.git"


[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
ignore_errors = true
show_missing = true

[tool.coverage.run]
branch = true
include = ["qgis_deployment_toolbelt/*"]
omit = [".venv/*", "*tests*"]

[tool.flake8]
count = true
exclude = [
    ".git",
    "__pycache__",
    "docs/conf.py",
    "old",
    "build",
    "dist",
    ".venv*",
    "tests",
]
ignore = ["E121", "E123", "E126", "E203", "E226", "E24", "E704", "W503", "W504"]
max-complexity = 15
max-doc-length = 130
max-line-length = 100
statistics = true
tee = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.pytest.ini_options]
addopts = """
    --junitxml=junit/test-results.xml
    --cov-append tests/
    --cov-config=pyproject.toml
    --cov=qgis_deployment_toolbelt
    --cov-report=html
    --cov-report=term
    --cov-report=xml
    --ignore=tests/_wip/
"""
junit_family = "xunit2"
minversion = "5.0"
norecursedirs = ".* build dev development dist docs CVS fixtures _darcs {arch} *.egg venv _wip"
python_files = "test_*.py"
testpaths = ["tests"]


[tool.setuptools.dynamic]
version = { attr = "qgis_deployment_toolbelt.__about__.__version__" }

[tool.setuptools.package-data]
qgis_deployment_toolbelt = ["shortcuts/*.template"]

[tool.setuptools.packages.find]
include = ["qgis_deployment_toolbelt"]
namespaces = false
where = ["."]
